2003-06-09 Christian Schaller <Uraeus@gnome.org>

	* Changed wm theme for Nuvola to a hybrid of old one and Gorilla
	* Cleaned up Lush wm somewhat
	* Other small fixes

2003-06-09  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/gtk/gtkrc:
	* Gorilla/gtk-2.0/gtkrc: use industrial gtk engine
	
2003-06-08 Christian Schaller <Uraeus@gnome.org>
	
	* Added more stock icons to Nuvola
	* Added one more mimetype icon to Wasp

2003-06-08  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/gtk-2.0/*.svg:
	* Gorilla/icons/stock/*.svg: move to the icon theme

2003-06-08  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/metacity-1/Makefile.am:
	* Gorilla/Makefile.am:
	* configure.in: automagick for metacity theme
	
2003-06-08  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/metacity-1/metacity-theme-1.xml
	* Gorilla/metacity-1/wm-close.svg
	* Gorilla/metacity-1/wm-max.svg
	* Gorilla/metacity-1/wm-menu.svg
	* Gorilla/metacity-1/wm-min.svg
	* Gorilla/metacity-1/wm-restore.svg: adding Gorilla metacity theme. gotta 
     add autotools files

2003-06-05 Christian Schaller <Uraeus@gnome.org>
	* Commited many updated icons from David Vignoni to Nuvola

2003-06-05 Christian Schaller <Uraeus@gnome.org>
	* Commited a couple of improved icons for Nuvola
	* Commited some fixes to Lush metacity theme, still needin love

2003-05-26  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

        * configure.in: Added Spanish (es) to ALL_LINGUAS.

2003-05-24  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2003-05-16 Christian Schaller <Uraeus@gnome.org>
	* Add stock icons to Lush theme
	* Add Smooth-Lush gtk theme
	* Add Lush-Galaxy metacity theme (alpha version)
	* Add license file for Wasp icons
	* Some minor bugfixes

2003-05-14  Jakub Steiner <jimmac@ximian.com>

   * Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-readme.svg:
   * Gorilla/icons/scalable/mimetypes/gnome-mime-text-x-patch.svg: